@@ -30,6 +30,26 @@ parser.plot()
 opts = PyCF.CFOptions(parser,2)
 infile = opts.cfprofile()
 
+
 plot = opts.plot()
+plot.defaults['LABEL_FONT_SIZE']='12p'
+plot.defaults['ANOT_FONT_SIZE']='10p'
+bigarea = PyGMT.AreaXY(plot,size=opts.papersize)
+
+for i in range(0,opts.nvars):
+    profile = opts.profs(infile,i)
+    area = PyGMT.AutoXY(bigarea,size=[opts.options.width,opts.options.width/2.],pos=[1.,i*(opts.options.width/2.+0.5)])
+    if i == 0:
+        area.axis='WeSn'
+        area.xlabel = 'distance along profile [km]'
+    else:
+        area.axis='Wesn'
+        area.xlabel = ''
+    area.ylabel = '%s [%s]'%(profile.long_name,profile.units)
+    time = opts.times(infile,0)
+    data = profile.getProfile(time)
+    area.add_line('-W1/0/0/0',infile.xvalues,data)
+    area.finalise(expandy=True)
+    area.coordsystem()
 
 plot.close()
