@@ -39,7 +39,8 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/create_topo.py',
                       'progs/plotCFvar.py',
                       'progs/plotEISvar.py',
-                      'progs/plotSpot.py'])]
+                      'progs/plotSpot.py',
+                      'progs/plotProfile.py'])]
 
 setup (name = "PyCF",
        version = "0.0",
