@@ -1,4 +1,7 @@
 2004-08-20 Magnus Hagdorn
+ * plotProfile.py works now
+
+2004-08-20 Magnus Hagdorn
  * start of profile stuff
 
 2004-08-09 Magnus Hagdorn
